Fix uploaded images overflowing the icon container

--- a/src/styles/scss/AvatarUpload.scss
+++ b/src/styles/scss/AvatarUpload.scss
@@ -64,6 +64,7 @@
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid hsl(246, 20%, 35%);
     border-radius: 10px;
+    overflow: hidden;
   }
 
   &__icon {
